--- a/ps_4.html
+++ b/ps_4.html
@@ -371,7 +371,7 @@ summary {
 
 <div id="question-1-mad-libs" class="section level2">
 <h2>Question #1: Mad Libs</h2>
-<p>ML 1) (Note that for all the madlibs you must call the function to receive points for this question: you cannot just manually calculate the mad lib result.) The standard deviation of median income, plus one, is 14456.7198499.</p>
+<p>ML 1) The standard deviation of median income, plus one, is 14456.7198499.</p>
 <p>ML 2) Treasure County, Montana is located in the state of Montana.</p>
 <p>ML 3) The upper bound for median income in Etowah County, Alabama (geoid = “01055”) is 45799.</p>
 </div>
@@ -391,7 +391,7 @@ summary {
 <h2>Question #5: Functions</h2>
 <div id="a" class="section level4">
 <h4>5A</h4>
-<p>In our example, we’re going to imagine that instead of using a numeric die, we’re using an alphabet die, which has every letter of the alphabet on it. Write a function called get_dice that rolls an alphabetical die n times and takes the earliest letter in the alphabet. Hint: typing the command letters will print all the letters in the english language for you. R also recognizes alphabetical order, so you can call min and max on characters. Print a call to your function with n = 3.</p>
+<p>5A: Rolling the alphabetical die 3 times yields l.</p>
 </div>
 <div id="b" class="section level4">
 <h4>5B</h4>
