--- a/ps_4.html
+++ b/ps_4.html
@@ -391,116 +391,508 @@ summary {
 <h2>Question #5: Functions</h2>
 <div id="a" class="section level4">
 <h4>5A</h4>
-<pre class="r"><code># This function rolls an alphabetical die n times and takes the earliest letter
-# in the alphabet. 
-
-# Defining this function was pretty straightforward, given the existence of
-# &quot;letters&quot; in R and the ability to call min() to find the &quot;smallest&quot; letter in
-# the alphabet
-
-get_letters &lt;- function(n){
-  sample(letters, size = n) %&gt;% 
-    min()
-}
-
-r4 &lt;- get_letters(n = 3)</code></pre>
-<p>Rolling the alphabetical die 3 times yields g.</p>
+<p>Rolling the alphabetical die 3 times yields i.</p>
 </div>
 <div id="b" class="section level4">
 <h4>5B</h4>
-<pre class="r"><code># This function calls the get_letters function n times (imagine that &quot;n&quot; is the
-# number of people throwing for a certain number of letters). The function calls
-# groups of 3 letters.
-
-# The function defined below essentially maps the (singular) result of get_dice
-# n times, from 1 to n, in a tibble
-
-# CHECK THIS!!!!
-
-roll_alpha_dice &lt;- function(n){
-  map_chr(1:n, ~ get_letters(3))
-}</code></pre>
+<p>See RMarkdown file for function.</p>
 </div>
 <div id="c" class="section level4">
 <h4>5C</h4>
-<pre class="r"><code># Here I make a tibble that stores the results of the 4 TF&#39;s playing this game
-# 100 times, followed by a gt table showing the first 5 rows.
+<style>html {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
+}
 
-# The function roll_alpha_dice() already has a &quot;default&quot; of get_letters(3) to
-# get 3 letters per player per game, and for the tibble we now set a &quot;default&quot;
-# of roll_alpha_dice(4) to account for the 4 players in the game. I specify
-# 1:100 to model the game being played 100 times.
+#jgqwcgsmnp .gt_table {
+  display: table;
+  border-collapse: collapse;
+  margin-left: auto;
+  /* table.margin.left */
+  margin-right: auto;
+  /* table.margin.right */
+  color: #333333;
+  font-size: 16px;
+  /* table.font.size */
+  background-color: #FFFFFF;
+  /* table.background.color */
+  width: auto;
+  /* table.width */
+  border-top-style: solid;
+  /* table.border.top.style */
+  border-top-width: 2px;
+  /* table.border.top.width */
+  border-top-color: #A8A8A8;
+  /* table.border.top.color */
+  border-bottom-style: solid;
+  /* table.border.bottom.style */
+  border-bottom-width: 2px;
+  /* table.border.bottom.width */
+  border-bottom-color: #A8A8A8;
+  /* table.border.bottom.color */
+}
 
-#r5 &lt;- tibble(map_chr(1:100, ~ roll_alpha_dice(4)))
+#jgqwcgsmnp .gt_heading {
+  background-color: #FFFFFF;
+  /* heading.background.color */
+  border-bottom-color: #FFFFFF;
+  /* table.background.color */
+  border-left-style: hidden;
+  /* heading.border.lr.style */
+  border-left-width: 1px;
+  /* heading.border.lr.width */
+  border-left-color: #D3D3D3;
+  /* heading.border.lr.color */
+  border-right-style: hidden;
+  /* heading.border.lr.style */
+  border-right-width: 1px;
+  /* heading.border.lr.width */
+  border-right-color: #D3D3D3;
+  /* heading.border.lr.color */
+}
 
-# Make a gt table showing the first 5 rows.
-# Each row of your gtable should have four letters. Let’s imagine that the first
-# letter in each row is the letter that Alyssa rolled. Using the same scenario
-# of 100 rolls and 4 tfs rolling 3 dice, use a map_lgl command to create a
-# column “vowel”, which tests whether the first letter of each row is a vowel
-# (a,e,i,o,u). Report how many times the letter selected was a vowel. For example, we had 28 vowels.
+#jgqwcgsmnp .gt_title {
+  color: #333333;
+  font-size: 125%;
+  /* heading.title.font.size */
+  font-weight: initial;
+  /* heading.title.font.weight */
+  padding-top: 4px;
+  /* heading.top.padding - not yet used */
+  padding-bottom: 4px;
+  border-bottom-color: #FFFFFF;
+  /* table.background.color */
+  border-bottom-width: 0;
+}
 
-&#39;r6 &lt;- r5 %&gt;% 
-  slice(1:5) %&gt;% 
-  gt()&#39;</code></pre>
-<pre><code>## [1] &quot;r6 &lt;- r5 %&gt;% \n  slice(1:5) %&gt;% \n  gt()&quot;</code></pre>
+#jgqwcgsmnp .gt_subtitle {
+  color: #333333;
+  font-size: 85%;
+  /* heading.subtitle.font.size */
+  font-weight: initial;
+  /* heading.subtitle.font.weight */
+  padding-top: 0;
+  padding-bottom: 4px;
+  /* heading.bottom.padding - not yet used */
+  border-top-color: #FFFFFF;
+  /* table.background.color */
+  border-top-width: 0;
+}
+
+#jgqwcgsmnp .gt_bottom_border {
+  border-bottom-style: solid;
+  /* heading.border.bottom.style */
+  border-bottom-width: 2px;
+  /* heading.border.bottom.width */
+  border-bottom-color: #D3D3D3;
+  /* heading.border.bottom.color */
+}
+
+#jgqwcgsmnp .gt_column_spanner {
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+#jgqwcgsmnp .gt_col_headings {
+  border-top-style: solid;
+  /* column_labels.border.top.style */
+  border-top-width: 2px;
+  /* column_labels.border.top.width */
+  border-top-color: #D3D3D3;
+  /* column_labels.border.top.color */
+  border-bottom-style: solid;
+  /* column_labels.border.bottom.style */
+  border-bottom-width: 2px;
+  /* column_labels.border.bottom.width */
+  border-bottom-color: #D3D3D3;
+  /* column_labels.border.bottom.color */
+  border-left-style: none;
+  /* column_labels.border.lr.style */
+  border-left-width: 1px;
+  /* column_labels.border.lr.width */
+  border-left-color: #D3D3D3;
+  /* column_labels.border.lr.color */
+  border-right-style: none;
+  /* column_labels.border.lr.style */
+  border-right-width: 1px;
+  /* column_labels.border.lr.width */
+  border-right-color: #D3D3D3;
+  /* column_labels.border.lr.color */
+}
+
+#jgqwcgsmnp .gt_col_heading {
+  color: #333333;
+  background-color: #FFFFFF;
+  /* column_labels.background.color */
+  font-size: 100%;
+  /* column_labels.font.size */
+  font-weight: normal;
+  /* column_labels.font.weight */
+  text-transform: inherit;
+  /* column_labels.text_transform */
+  vertical-align: middle;
+  padding: 5px;
+  margin: 10px;
+  overflow-x: hidden;
+}
+
+#jgqwcgsmnp .gt_sep_right {
+  border-right: 5px solid #FFFFFF;
+}
+
+#jgqwcgsmnp .gt_group_heading {
+  padding: 8px;
+  /* row_group.padding */
+  color: #333333;
+  background-color: #FFFFFF;
+  /* row_group.background.color */
+  font-size: 100%;
+  /* row_group.font.size */
+  font-weight: initial;
+  /* row_group.font.weight */
+  text-transform: inherit;
+  /* row_group.text_transform */
+  border-top-style: solid;
+  /* row_group.border.top.style */
+  border-top-width: 2px;
+  /* row_group.border.top.width */
+  border-top-color: #D3D3D3;
+  /* row_group.border.top.color */
+  border-bottom-style: solid;
+  /* row_group.border.bottom.style */
+  border-bottom-width: 2px;
+  /* row_group.border.bottom.width */
+  border-bottom-color: #D3D3D3;
+  /* row_group.border.bottom.color */
+  border-left-style: none;
+  /* row_group.border.left.style */
+  border-left-width: 1px;
+  /* row_group.border.left.width */
+  border-left-color: #D3D3D3;
+  /* row_group.border.left.color */
+  border-right-style: none;
+  /* row_group.border.right.style */
+  border-right-width: 1px;
+  /* row_group.border.right.width */
+  border-right-color: #D3D3D3;
+  /* row_group.border.right.color */
+  vertical-align: middle;
+}
+
+#jgqwcgsmnp .gt_empty_group_heading {
+  padding: 0.5px;
+  color: #333333;
+  background-color: #FFFFFF;
+  /* row_group.background.color */
+  font-size: 100%;
+  /* row_group.font.size */
+  font-weight: initial;
+  /* row_group.font.weight */
+  border-top-style: solid;
+  /* row_group.border.top.style */
+  border-top-width: 2px;
+  /* row_group.border.top.width */
+  border-top-color: #D3D3D3;
+  /* row_group.border.top.color */
+  border-bottom-style: solid;
+  /* row_group.border.bottom.style */
+  border-bottom-width: 2px;
+  /* row_group.border.bottom.width */
+  border-bottom-color: #D3D3D3;
+  /* row_group.border.bottom.color */
+  vertical-align: middle;
+}
+
+#jgqwcgsmnp .gt_striped {
+  background-color: rgba(128, 128, 128, 0.05);
+  /* row.striping.background_color */
+}
+
+#jgqwcgsmnp .gt_from_md > :first-child {
+  margin-top: 0;
+}
+
+#jgqwcgsmnp .gt_from_md > :last-child {
+  margin-bottom: 0;
+}
+
+#jgqwcgsmnp .gt_row {
+  padding-top: 8px;
+  /* data_row.padding */
+  padding-bottom: 8px;
+  /* data_row.padding */
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 10px;
+  border-top-style: solid;
+  /* table_body.hlines.style */
+  border-top-width: 1px;
+  /* table_body.hlines.width */
+  border-top-color: #D3D3D3;
+  /* table_body.hlines.color */
+  border-left-style: none;
+  /* table_body.vlines.style */
+  border-left-width: 1px;
+  /* table_body.vlines.width */
+  border-left-color: #D3D3D3;
+  /* table_body.vlines.color */
+  border-right-style: none;
+  /* table_body.vlines.style */
+  border-right-width: 1px;
+  /* table_body.vlines.width */
+  border-right-color: #D3D3D3;
+  /* table_body.vlines.color */
+  vertical-align: middle;
+  overflow-x: hidden;
+}
+
+#jgqwcgsmnp .gt_stub {
+  color: #333333;
+  background-color: #FFFFFF;
+  /* stub.background.color */
+  font-weight: initial;
+  /* stub.font.weight */
+  text-transform: inherit;
+  /* stub.text_transform */
+  border-right-style: solid;
+  /* stub.border.style */
+  border-right-width: 2px;
+  /* stub.border.width */
+  border-right-color: #D3D3D3;
+  /* stub.border.color */
+  padding-left: 12px;
+}
+
+#jgqwcgsmnp .gt_summary_row {
+  color: #333333;
+  background-color: #FFFFFF;
+  /* summary_row.background.color */
+  text-transform: inherit;
+  /* summary_row.text_transform */
+  padding-top: 8px;
+  /* summary_row.padding */
+  padding-bottom: 8px;
+  /* summary_row.padding */
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#jgqwcgsmnp .gt_first_summary_row {
+  padding-top: 8px;
+  /* summary_row.padding */
+  padding-bottom: 8px;
+  /* summary_row.padding */
+  padding-left: 5px;
+  padding-right: 5px;
+  border-top-style: solid;
+  /* summary_row.border.style */
+  border-top-width: 2px;
+  /* summary_row.border.width */
+  border-top-color: #D3D3D3;
+  /* summary_row.border.color */
+}
+
+#jgqwcgsmnp .gt_grand_summary_row {
+  color: #333333;
+  background-color: #FFFFFF;
+  /* grand_summary_row.background.color */
+  text-transform: inherit;
+  /* grand_summary_row.text_transform */
+  padding-top: 8px;
+  /* grand_summary_row.padding */
+  padding-bottom: 8px;
+  /* grand_summary_row.padding */
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#jgqwcgsmnp .gt_first_grand_summary_row {
+  padding-top: 8px;
+  /* grand_summary_row.padding */
+  padding-bottom: 8px;
+  /* grand_summary_row.padding */
+  padding-left: 5px;
+  padding-right: 5px;
+  border-top-style: double;
+  /* grand_summary_row.border.style */
+  border-top-width: 6px;
+  /* grand_summary_row.border.width */
+  border-top-color: #D3D3D3;
+  /* grand_summary_row.border.color */
+}
+
+#jgqwcgsmnp .gt_table_body {
+  border-top-style: solid;
+  /* table_body.border.top.style */
+  border-top-width: 2px;
+  /* table_body.border.top.width */
+  border-top-color: #D3D3D3;
+  /* table_body.border.top.color */
+  border-bottom-style: solid;
+  /* table_body.border.bottom.style */
+  border-bottom-width: 2px;
+  /* table_body.border.bottom.width */
+  border-bottom-color: #D3D3D3;
+  /* table_body.border.bottom.color */
+}
+
+#jgqwcgsmnp .gt_footnotes {
+  color: #333333;
+  background-color: #FFFFFF;
+  /* footnotes.background.color */
+  border-bottom-style: none;
+  /* footnotes.border.bottom.style */
+  border-bottom-width: 2px;
+  /* footnotes.border.bottom.width */
+  border-bottom-color: #D3D3D3;
+  /* footnotes.border.bottom.color */
+  border-left-style: none;
+  /* footnotes.border.lr.color */
+  border-left-width: 2px;
+  /* footnotes.border.lr.color */
+  border-left-color: #D3D3D3;
+  /* footnotes.border.lr.color */
+  border-right-style: none;
+  /* footnotes.border.lr.color */
+  border-right-width: 2px;
+  /* footnotes.border.lr.color */
+  border-right-color: #D3D3D3;
+  /* footnotes.border.lr.color */
+}
+
+#jgqwcgsmnp .gt_footnote {
+  margin: 0px;
+  font-size: 90%;
+  /* footnotes.font.size */
+  padding: 4px;
+  /* footnotes.padding */
+}
+
+#jgqwcgsmnp .gt_sourcenotes {
+  color: #333333;
+  background-color: #FFFFFF;
+  /* source_notes.background.color */
+  border-bottom-style: none;
+  /* source_notes.border.bottom.style */
+  border-bottom-width: 2px;
+  /* source_notes.border.bottom.width */
+  border-bottom-color: #D3D3D3;
+  /* source_notes.border.bottom.color */
+  border-left-style: none;
+  /* source_notes.border.lr.style */
+  border-left-width: 2px;
+  /* source_notes.border.lr.style */
+  border-left-color: #D3D3D3;
+  /* source_notes.border.lr.style */
+  border-right-style: none;
+  /* source_notes.border.lr.style */
+  border-right-width: 2px;
+  /* source_notes.border.lr.style */
+  border-right-color: #D3D3D3;
+  /* source_notes.border.lr.style */
+}
+
+#jgqwcgsmnp .gt_sourcenote {
+  font-size: 90%;
+  /* source_notes.font.size */
+  padding: 4px;
+  /* source_notes.padding */
+}
+
+#jgqwcgsmnp .gt_left {
+  text-align: left;
+}
+
+#jgqwcgsmnp .gt_center {
+  text-align: center;
+}
+
+#jgqwcgsmnp .gt_right {
+  text-align: right;
+  font-variant-numeric: tabular-nums;
+}
+
+#jgqwcgsmnp .gt_font_normal {
+  font-weight: normal;
+}
+
+#jgqwcgsmnp .gt_font_bold {
+  font-weight: bold;
+}
+
+#jgqwcgsmnp .gt_font_italic {
+  font-style: italic;
+}
+
+#jgqwcgsmnp .gt_super {
+  font-size: 65%;
+}
+
+#jgqwcgsmnp .gt_footnote_marks {
+  font-style: italic;
+  font-size: 65%;
+}
+</style>
+<div id="jgqwcgsmnp" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+  
+  <thead class="gt_col_headings">
+    <tr>
+      <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1">First Five Games</th>
+    </tr>
+  </thead>
+  <tbody class="gt_table_body">
+    <tr>
+      <td class="gt_row gt_center">c, h, l, c</td>
+    </tr>
+    <tr>
+      <td class="gt_row gt_center gt_striped">m, b, a, g</td>
+    </tr>
+    <tr>
+      <td class="gt_row gt_center">c, g, e, e</td>
+    </tr>
+    <tr>
+      <td class="gt_row gt_center gt_striped">c, e, g, e</td>
+    </tr>
+    <tr>
+      <td class="gt_row gt_center">k, a, f, g</td>
+    </tr>
+  </tbody>
+  
+  
+</table></div>
+<p>In 100 games, Alyssa rolls 23 vowels.</p>
 </div>
 <div id="d" class="section level4">
 <h4>5D</h4>
-<pre class="r"><code># This function rolls an alphabetical die n times and takes the earliest letter
-# in the alphabet. 
-
-# Defining this function was pretty straightforward, given the existence of
-# &quot;letters&quot; in R and the ability to call min() to find the &quot;smallest&quot; letter in
-# the alphabet, so to speak
-
-get_dice &lt;- function(n){
-  sample(letters, size = n) %&gt;% 
-    min()
-}
-
-r5 &lt;- get_dice(n = 3)</code></pre>
-<p>How surprised would you be if for all four tf’s the earliest alphabetical letter they rolled was a vowel? Using a tibble that shows the four tf’s playing the game 10,000 times, calculate the probability that they all roll a vowel.</p>
 </div>
 <div id="e" class="section level4">
 <h4>5E</h4>
-<pre class="r"><code># This function rolls an alphabetical die n times and takes the earliest letter
-# in the alphabet. 
+<pre class="r"><code># Using your functions, make a simple plot mapping the distribution of “first”
+# letters in 1000 rolls of 3 dice. For this example, you can use a single “tf”
+# (n = 1) when you call roll_alpha_dice. Hint: You might want to check out what
+# unnest does.
 
-# Defining this function was pretty straightforward, given the existence of
-# &quot;letters&quot; in R and the ability to call min() to find the &quot;smallest&quot; letter in
-# the alphabet, so to speak
-
-get_dice &lt;- function(n){
-  sample(letters, size = n) %&gt;% 
-    min()
-}
-
-r5 &lt;- get_dice(n = 3)</code></pre>
-<p>Using your functions, make a simple plot mapping the distribution of “first” letters in 1000 rolls of 3 dice. For this example, you can use a single “tf” (n = 1) when you call roll_alpha_dice. Hint: You might want to check out what unnest does.</p>
+#</code></pre>
 </div>
 <div id="f" class="section level4">
 <h4>5F</h4>
-<pre class="r"><code># This function rolls an alphabetical die n times and takes the earliest letter
-# in the alphabet. 
+<pre class="r"><code># Finally, make a plot comparing 5E (selecting the earliest alphabetical letter
+# from 3 dice) with an exercise where the first letter is selected from 5 dice.
+# How does the distribution shift?
 
-# Defining this function was pretty straightforward, given the existence of
-# &quot;letters&quot; in R and the ability to call min() to find the &quot;smallest&quot; letter in
-# the alphabet, so to speak
-
-get_dice &lt;- function(n){
-  sample(letters, size = n) %&gt;% 
-    min()
-}
-
-r5 &lt;- get_dice(n = 3)</code></pre>
-<p>Finally, make a plot comparing 5E (selecting the earliest alphabetical letter from 3 dice) with an exercise where the first letter is selected from 5 dice. How does the distribution shift?</p>
+#</code></pre>
 </div>
 <div id="colleagues" class="section level4">
 <h4>Colleagues:</h4>
 <ul>
 <li>Grace Pan</li>
 <li>Brendan Chapuis</li>
+<li>Michael Chen</li>
+<li>Rachel Phan</li>
+<li>Brian Kim</li>
+<li>Hudson Miller</li>
 </ul>
 </div>
 </div>
